# naturo

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STATE.md  bugs.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.work/: agent-system-guide.md  anti-crawl-research.md  bugs-archive.md  bugs.md  command-audit.md  github-planning-summary.md  intercept-anthropic.mjs  qa-round-2026-03-25-report.md  qa-round-mar25-1743-report.md  qa-round13-report.md  report-audit.md  spawn-templates.md  v0.3.0-qa-report.md  v0.3.0-release-guide.md
agents/: RULES.md  STATE.md  VISION.md  orchestrator.py
core/: CMakeLists.txt  vcpkg.json
core/include/naturo/: exports.h
core/src/: element.cpp  ia2.cpp  input.cpp  jab.cpp  msaa.cpp  version.cpp
core/tests/: test_version.cpp
docs/: ARCHITECTURE.md  DECISIONS.md  DESIGN-PRINCIPLES.md  GROWTH.md  RELEASE.md  ROADMAP.md  SUPPORTED_APPS.md
examples/: README.md
naturo/: __init__.py  __main__.py  agent.py  bridge.py  cdp.py  cli.py  dialog.py  electron.py  errors.py  excel.py  mcp_server.py  process.py  recording.py  registry.py  retry.py  service.py  snapshot.py
npm/: README.md  package.json
openclaw-skill/: SKILL.md
scripts/: bump_version.py
tests/: conftest.py  test_agent.py  test_ai_find.py  test_app_control.py  test_backends.py  test_bridge.py  test_bug_round_full.py  test_capture_ux.py  test_cdp.py  test_cli.py  test_cli_consistency.py  test_cli_phase1.py  test_cli_phase2.py  test_cli_phase3.py  test_clipboard.py  test_desktop.py  test_detect.py  (+27 more)
(+48 files in other folders)
